vite build and dependency changes

--- a/src/client/html/pages/input.html
+++ b/src/client/html/pages/input.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Resume Input</title>
-   <link rel="stylesheet" type="text/css" href="text_input_styles.css">
+   <link rel="stylesheet" type="text/css" href="/client/css/text-input-styles.css">
 </head>
 <body>
    <!-- form for user's preferred name to be used on generated portfolio page -->
