Revert back to base functionality

--- a/src/public/html/portf_template.html
+++ b/src/public/html/portf_template.html
@@ -8,10 +8,10 @@
   <body>
     <div class="container">
       <header>
-        <!-- Add headshot image here -->
-        <img
+        <!-- Add profile image here -->
+        <img`
           src="https://randomuser.me/api/portraits/men/1.jpg"
-          alt="User Headshot"
+          alt="User Profile Image"
           id="headshot"
         />
         <h1 id="name"></h1>
